--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
         "test_*.py"
     ],
     "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.unittestEnabled": true,
+    "markiscodecoverage.searchCriteria": "coverage/lcov*.info",
+    "markiscodecoverage.enableOnStartup": true
 }
